--- a/Projects/Dait_Kobe_Assignment4/public/manager.html
+++ b/Projects/Dait_Kobe_Assignment4/public/manager.html
@@ -1,8 +1,22 @@
 <!-- Author: Kobe Dait -->
-<!-- File Description: Home Page -->
+<!-- File Description: Loyalty Manager Page: For Admin to view customer data -->
 
 <script>
+  // Script source from Shane Shimizu
+  window.onload = function () { // When page loads
+    let params = (new URL(document.location)).searchParams;
+    emptyName = document.getElementById("showUserName").innerHTML; // Get the innner html of the given ID and assigsn into a variable
+    compareVar = 0; // Create variable to compare to emptyname variable
+    if (params.has("stickUsername")) { // If has stickUsername
+      displayName = params.get("stickUsername"); // Get the information from the query 
+      document.getElementById("showUserName").innerHTML = displayName; // Sets the inner html to display the username
+    } else if (emptyName == compareVar) { // If the inner html does not change from 0 or 0==0
+      alert('You will be redirected to previous page.  Please login first!');
+      javascript: history.go(-1) // Redirect user back to login page
+    }
+  }
 
+  response.cookie('rememberme', '1', { maxAge: 900000, httpOnly: true }); // Keeps user logged in for 15 min
 </script>
 
 <!-- HTML format from https://darkcode1.blogspot.com/2019/07/animated-login-form-using-html-css.html -->
@@ -17,44 +31,46 @@
 </head>
 
 <body>
-  <header>
+  <div id="customer-database" <header>
     <ul id="header-bar">
       <li id="page-title">Admin Loyalty Manager</li>
+      <li>&nbsp;</li>
+      <li style="text-align: right;">Welcome<div id="showUserName">0</div>
+      </li>
     </ul>
-  </header>
-  <h1>Points, birthday, last time you visit.</h1>
-  <form name="customerName" class="customer-search" method="POST">
-    <h1>Search Customer:</h1>
-    <div class="txtb">
-      <input id="userBox" type="text" name="user-name" onchange="javascript:this.value = this.value.toLowerCase();"
-        required>
-      <!--Makes the username case-insensitive-->
-      <span data-placeholder="Customer"></span>
-    </div>
-    <div id="customerlabel"></div>
-    <input name="search_button" type="submit" class="logbtn" value="Search">
-    <br>
-    <input name="databse_button" type="submit" class="logbtn" value="Database">
-    <div id="customerError"></div>
-  </form>
+    </header>
+    <h1>Points, birthday, last time you visit.</h1>
+    <form name="customerName" class="customer-search" method="POST">
+      <h1>Search Customer:</h1>
+      <div class="txtb">
+        <input id="userBox" type="text" name="user-name" onchange="javascript:this.value = this.value.toLowerCase();">
+        <!--Makes the username case-insensitive-->
+        <span data-placeholder="Customer"></span>
+      </div>
+      <div id="customerlabel"></div>
+      <input name="search_button" type="submit" class="logbtn" value="Search">
+      <br>
+      <input name="databse_button" type="submit" class="logbtn" value="Database">
+      <div id="customerError"></div>
+    </form>
 
-  <!-- Script from https://darkcode1.blogspot.com/2019/07/animated-login-form-using-html-css.html -->
-  <script type="text/javascript">
-    // Creates the animaitons on Login form
-    $(".txtb input").on("focus", function () {
-      $(this).addClass("focus");
-    });
+    <!-- Script from https://darkcode1.blogspot.com/2019/07/animated-login-form-using-html-css.html -->
+    <script type="text/javascript">
+      // Creates the animaitons on Login form
+      $(".txtb input").on("focus", function () {
+        $(this).addClass("focus");
+      });
 
-    $(".txtb input").on("blur", function () {
-      if ($(this).val() == "")
-        $(this).removeClass("focus");
-    });
-  </script>
+      $(".txtb input").on("blur", function () {
+        if ($(this).val() == "")
+          $(this).removeClass("focus");
+      });
+    </script>
 </body>
 
 </html>
 <script>
   // Source from Shane Shimizu
   // Sets link and goes to next page
-  customerName.action = "./database" + document.location.search; 
+  // customerName.action = "./database_form" + document.location.search; 
 </script>
