--- a/Projects/Dait_Kobe_Assignment4/public/manager.html
+++ b/Projects/Dait_Kobe_Assignment4/public/manager.html
@@ -31,46 +31,48 @@
 </head>
 
 <body>
-  <div id="customer-database" <header>
-    <ul id="header-bar">
-      <li id="page-title">Admin Loyalty Manager</li>
-      <li>&nbsp;</li>
-      <li style="text-align: right;">Welcome<div id="showUserName">0</div>
-      </li>
-    </ul>
-    </header>
-    <h1>Points, birthday, last time you visit.</h1>
-    <form name="customerName" class="customer-search" method="POST">
-      <h1>Search Customer:</h1>
-      <div class="txtb">
-        <input id="userBox" type="text" name="user-name" onchange="javascript:this.value = this.value.toLowerCase();">
-        <!--Makes the username case-insensitive-->
-        <span data-placeholder="Customer"></span>
-      </div>
-      <div id="customerlabel"></div>
-      <input name="search_button" type="submit" class="logbtn" value="Search">
-      <br>
-      <input name="databse_button" type="submit" class="logbtn" value="Database">
-      <div id="customerError"></div>
-    </form>
+  <header>
+    <div id="customer-database">
+      <ul id="header-bar">
+        <li id="page-title">Admin Loyalty Manager</li>
+        <li>&nbsp;</li>
+        <li style="text-align: right;">Welcome<div id="showUserName">0</div>
+        </li>
+      </ul>
+    </div>
+  </header>
+  <h1>Points, birthday, last time you visit.</h1>
+  <form name="customerName" class="customer-search" method="POST">
+    <h1>Search Customer:</h1>
+    <div class="txtb">
+      <input id="userBox" type="text" name="user-name" onchange="javascript:this.value = this.value.toLowerCase();">
+      <!--Makes the username case-insensitive-->
+      <span data-placeholder="Customer"></span>
+    </div>
+    <div id="customerlabel"></div>
+    <input name="search_button" type="submit" class="logbtn" value="Search">
+    <br>
+    <input name="databse_button" type="submit" onclick="showData();" class="logbtn" value="Database">
+    <div id="customerError"></div>
+  </form>
 
-    <!-- Script from https://darkcode1.blogspot.com/2019/07/animated-login-form-using-html-css.html -->
-    <script type="text/javascript">
-      // Creates the animaitons on Login form
-      $(".txtb input").on("focus", function () {
-        $(this).addClass("focus");
-      });
+  <!-- Script from https://darkcode1.blogspot.com/2019/07/animated-login-form-using-html-css.html -->
+  <script type="text/javascript">
+    // Creates the animaitons on Login form
+    $(".txtb input").on("focus", function () {
+      $(this).addClass("focus");
+    });
 
-      $(".txtb input").on("blur", function () {
-        if ($(this).val() == "")
-          $(this).removeClass("focus");
-      });
-    </script>
+    $(".txtb input").on("blur", function () {
+      if ($(this).val() == "")
+        $(this).removeClass("focus");
+    });
+  </script>
 </body>
 
 </html>
 <script>
   // Source from Shane Shimizu
   // Sets link and goes to next page
-  // customerName.action = "./database_form" + document.location.search; 
+  customerName.action = "./database_form" + document.location.search; 
 </script>
